# wildberrys_pars

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  response.json
wildberrys_pars/: config.py  main.py  read_response.py  utils.py  validator.py  wildberrys_scraper.py
wildberrys_pars/handlers/: client.py
